# hcmus-hallucination-detection

./: .gitignore  README.md  experiment.ipynb  main.py  pyproject.toml  test.py
detection_baseline/: detection_halp.py  detection_stats.py
detection_baselines/: detection_attention.py  detection_halp.py  detection_stats.py  detection_vl_uncertainty.py
egh_vlm/: extract_feature.py  extract_features.py  extract_output.py  extract_outputs.py  generate_answers.py  generate_response.py  hallu_dataset.py  hallu_ffn_detector.py  hallucination_dataset.py  hallucination_detector.py  main.py  model.py  relabel.py  training.py  utils.py
experiment/: egh_vlm.ipynb  egh_vlm_paired.ipynb  eval_phd.ipynb  eval_phd_prototype.ipynb  extract_features.ipynb  generate_answers.ipynb  hallusion_bench.ipynb  hallusion_bench_long_answer.ipynb  hallusion_bench_raw.ipynb  kaggle_generate_answers.ipynb  phd.ipynb  phd_prototype.ipynb  phd_prototype_generate_enhanced_response.ipynb  phd_prototype_generate_response.ipynb  phd_prototype_raw.ipynb  phd_raw.ipynb
experiment/detection/: detection_halp.ipynb  detection_stats.ipynb  extract_features.ipynb  extract_features_halp.ipynb  extract_features_stats.ipynb  generate_answers.ipynb  relabel.py  relabel_phd.ipynb
experiment/egh_vlm/: detection_attention.ipynb  detection_halp.ipynb  detection_stats.ipynb  detection_vl_uncertainty.ipynb  egh.ipynb  egh_linear_probing.ipynb  egh_vlm.ipynb  egh_vlm_eval.ipynb  egh_vlm_generate_enhanced_response.ipynb  egh_vlm_generate_raw_response.ipynb  egh_vlm_investigate.ipynb  egh_vlm_linear_probing.ipynb  eval_egh.ipynb  eval_egh_vlm.ipynb  extract_attention.ipynb  extract_features.ipynb  extract_features_stats.ipynb  extract_halp.ipynb  extract_output.ipynb  extract_stats.ipynb  (+5 more)
training/: egh_vlm.ipynb  egh_vlm_hallusion_bench.ipynb
(+21 files in other folders)
